# WordLern

./: .env.example  .pylintrc  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: app.yml  codeql.yml
config/: settings.py
db/: models.py  users.py  words_repo.py
docker/homework/: Dockerfile
docker/tests/: Dockerfile
migration/: env.py
seed/: __main__.py  seed_users.py
src/server/: contracts.py  server.py
src/word/: word_client.py
tests/: test_server.py
